maybe fix CI
