# pact/swagger-spec.yml
@@ -54,12 +54,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/LoginResponseDto"
-        "202":
-          description: ""
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/LoginResponseDto"
         "401":
           description: Password mismatch
         "404":
